fix county name being covered

--- a/css/theme.css
+++ b/css/theme.css
@@ -159,8 +159,6 @@ body,
 .isu-menu-navbar_toggler-icon {
   display: block;
   margin-top: 2em;
-  width: 1.2em;
-  height: 1.2em;
 }
 .isu-menu-navbar_toggler-icon::before {
   content: '\f0c9';
@@ -168,7 +166,7 @@ body,
   font-family: FontAwesome;
   font-size: 2em;
   color: var(--cardinal);
-  margin-left: -0.7em;
+  margin-left: -1em;
   margin-top: -0.5em;
 }
 .isu-menu-navbar_toggler_open .isu-menu-navbar_toggler-icon:before,.isu-menu-navbar_toggler_open .isu-menu-navbar_toggler-icon:after{
@@ -329,15 +327,14 @@ body,
     max-width: 300px;
   }
   .isu-wordmark-sitename {
-    padding-left: 13px;
+    padding-left: 0px;
     padding-bottom: 0px;
-	  padding-left: 2%;
  }
 }
 
 @media screen and (max-width : 1199px) {
   .isu-wordmark-sitename {
-    margin-top: -1%;
+    padding-left: 2%;
   }
 }
 
@@ -594,8 +591,8 @@ div#edit-search-broadness {
 @media screen and (max-width: 991px) {
 .isu-site-navbar div {
   max-width: inherit;
-  margin: 0px;
-  padding: 5px;
+  margin-top: 0px;
+  margin-bottom: 0px;
   }
 }
 
@@ -732,7 +729,7 @@ div#edit-search-broadness {
 		padding: 2rem;
 		min-height: 1000px;
 		min-width: 100vw;
-    margin-top: 10%;
+	    margin-top: 2rem;
 	}
   .isu-menu-navbar_wrap {
     width: 100%;
@@ -1173,7 +1170,7 @@ li article:not(.isu-user):not(.isu-search_collapse) {
 h2.isu-block-title.h4 {
 	margin-bottom: 1.75rem;
 	line-height: 1.4;
-	font-size: clamp(2rem, 2.2vw, 1.875rem);
+	font-size: 1.875rem;
 	color: var(--cardinal);
 	position: relative;
 }
@@ -1918,27 +1915,21 @@ a.tabledrag-handle .handle {
 /* --------------------------------------  */
 @media screen and (max-width : 575px) {
   .isu-footer-logo{
+    padding-left: 3%;
     padding-bottom: 0px;
   }
 }
 @media screen and (max-width : 768px) {
   .isu-region_footer-third {
 		margin-bottom: 1rem;
-    font-size: 1.5rem;
 	}
-  .isu-footer_contact-address-title {
-    font-size: 1.5rem;
-  }
   .isu-social-menu-footer{
-		display: none;
+		margin-left: 0px;
 	}
-  .isu-footer-logo {
-    width: 90vw;
-  }
 }
 @media screen and (max-width: 991px) {
   .isu-footer .col-md-6 {
-		flex: 0 0 100%;
+		flex: 0 0 50%;
 		max-width: 75%;
 	}
 }
@@ -1966,7 +1957,7 @@ a.tabledrag-handle .handle {
 		padding-bottom: 20px;
 	}
   footer .row, .col-lg-3 {
-    display: flex; 
+    display: grid;
     max-width: 100%;
   }
   .isu-footer .col-sm-6.col-md-6.col-lg-3:nth-of-type(1) {
@@ -1981,6 +1972,7 @@ a.tabledrag-handle .handle {
   }
   .isu-footer .col-sm-6.col-md-6.col-lg-3:nth-of-type(4) {
     order: 3;
+    justify-content: space-evenly;
   }
 }
 
